--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
       "@types/react-dom": "^16.9.0",
       "@types/react-redux": "^7.1.7",
       "axios": "^0.25.0",
-      "global": "^4.4.0",
       "json-server": "^0.17.0",
       "react": "^17.0.2",
       "react-dom": "^17.0.2",
@@ -28,7 +27,7 @@
       "build": "react-scripts build",
       "test": "react-scripts test",
       "eject": "react-scripts eject",
-      "server": "json-server --watch database/db.json --port 5000"
+      "server": "json-server --watch db.json --port 5000"
    },
    "eslintConfig": {
       "extends": "react-app"
